# ur10_datasampling

./: CMakeLists.txt  package.xml
scripts/: joints.py  tcp.py  tcp2_cb2.py  tcp_cb2.py  wrists.py
ur10_control/: CMakeLists.txt  package.xml
ur10_control/config/: ur10_control.yaml
ur10_control/launch/: ur10_description.launch  ur10_description.rviz
ur10_control/src/: arm_mover.cpp  move_robot.cpp
ur10_control/srv/: GoToPosition.srv
ur10_control/urdf/: ur10.gazebo  ur10.xacro
